--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -7,6 +7,6 @@ on:
 
 jobs:
   call-release-workflow:
-    uses: ./.github/workflows/release.yml
+    uses: ./.github/workflows/release.yaml
     with:
       branch: 'dev'
