--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebolt-certification-suite",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Firebolt Certification Test Suite",
   "main": "index.js",
   "scripts": {
@@ -55,12 +55,17 @@
   },
   "devDependencies": {
     "babel-jest": "^27.4.5",
+    "@commitlint/config-conventional": "^17.1.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^27.4.5",
-    "prettier": "^3.0.2"
+    "prettier": "^3.0.2",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.1",
+    "semantic-release": "^19.0.5"
   },
   "cypress-cucumber-preprocessor": {
     "json": {
