--- a/cypress/fixtures/objects/lifecycleAppObject.json
+++ b/cypress/fixtures/objects/lifecycleAppObject.json
@@ -1,34 +1,34 @@
 {
   "validationConfig": {
     "initializing": {
-      "stateValidation": { "req": "R*2.1.1 & R*2.1.2 & R*4.6" },
-      "historyValidation": { "req": "R*2.1.3" },
+      "stateValidation": { "req": "1.1.1 & 3.5" },
+      "historyValidation": { "req": "1.1.2" },
       "notificationValidation": { "req": "" }
     },
     "inactive": {
-      "stateValidation": { "req": "R*4.6" },
-      "historyValidation": { "req": "" },
-      "notificationValidation": { "req": "R*2.2.2 ['onInactive' event triggered]" }
+      "stateValidation": { "req": "1.2.2 & 3.5" },
+      "historyValidation": { "req": "1.1.2" },
+      "notificationValidation": { "req": ["1.2.1", "1.2.2"] }
     },
     "foreground": {
-      "stateValidation": { "req": "R*4.6" },
+      "stateValidation": { "req": "3.5" },
       "historyValidation": { "req": "" },
-      "notificationValidation": { "req": "R*2.3.6 ['onForeground' event triggered]" }
+      "notificationValidation": { "req": ["1.3.6", "1.3.6"] }
     },
     "background": {
-      "stateValidation": { "req": "R*4.6" },
+      "stateValidation": { "req": "3.5" },
       "historyValidation": { "req": "" },
-      "notificationValidation": { "req": "R*2.4.6 ['onBackground' event triggered]" }
+      "notificationValidation": { "req": ["1.4.6", "1.3.6"] }
     },
     "unloading": {
-      "stateValidation": { "req": "R*2.5.1 & R*2.5.2 & R*4.6" },
-      "historyValidation": { "req": "R*2.5.3" },
+      "stateValidation": { "req": "1.5.1 & 3.5" },
+      "historyValidation": { "req": "1.5.2" },
       "notificationValidation": { "req": "" }
     },
     "suspended": {
-      "stateValidation": { "req": "R*4.6" },
+      "stateValidation": { "req": "3.5" },
       "historyValidation": { "req": "" },
-      "notificationValidation": { "req": "R*2.6.6 ['onSuspended' event triggered]" }
+      "notificationValidation": { "req": ["1.6.4", "1.6.3"] }
     },
     "unloaded": {
       "stateValidation": { "req": "" },
