--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -4,7 +4,28 @@ on:
   workflow_dispatch:
 
 jobs:
+  check-team-membership:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check team membership
+        id: check_team
+        run: |
+          TEAM_NAME="${{ secrets.RELEASE_TEAM_NAME }}"
+          ORG_NAME="rdkcentral"
+          USERNAME="${{ github.actor }}"
+
+          # Check if the user is part of the specified team
+          IS_MEMBER=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/orgs/$ORG_NAME/teams/$TEAM_NAME/memberships/$USERNAME \
+            | jq -r '.state')
+
+          if [ "$IS_MEMBER" != "active" ]; then
+            echo "User is not a member of the $TEAM_NAME team"
+            exit 1
+          fi
+
   validate-dev:
+    needs: check-team-membership
     uses: ./.github/workflows/lint-and-sample-feature-run.yaml
     with:
       branch: 'dev'
@@ -19,6 +40,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          repo-token: ${{ secrets.SEMANTIC_RELEASE_BOT_PAT }}
+          persist-credentials: true
 
       - name: Set up Git
         run: |
@@ -53,6 +76,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          repo-token: ${{ secrets.SEMANTIC_RELEASE_BOT_PAT }}
+          persist-credentials: true
 
       - name: Set up Git
         run: |
@@ -71,7 +96,7 @@ jobs:
 
   notify-on-failure:
     name: Notify on Failure
-    needs: [validate-dev, merge-dev-to-main, release, merge-main-to-dev]
+    needs: [check-team-membership, validate-dev, merge-dev-to-main, release, merge-main-to-dev]
     if: ${{ failure() }}
     runs-on: ubuntu-latest
 
