--- a/.github/workflows/pr-name-check.yaml
+++ b/.github/workflows/pr-name-check.yaml
@@ -1,28 +1,31 @@
 name: PR Name Check
 
 on:
-  pull_request:
-    branches:
-      - 'dev'
-    types: [opened, edited, synchronize]
+  workflow_dispatch:
 
 jobs:
-  check-pr-name:
+  check-team-membership:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
-
-      - name: Check PR title
+      - name: Check team membership
+        id: check_team
         run: |
-          if ! echo "${{ github.event.pull_request.title }}" | grep -Eq "^(feat|fix|BREAKING CHANGE)(\([^)]+\))?: "; then
-            echo 'FAIL_OUTPUT=Invalid PR title. It must start with feat: or fix: or BREAKING CHANGE: or feat(<DESCRIPTOR>): or fix(<DESCRIPTOR>): or BREAKING CHANGE(<DESCRIPTOR>):. Please see our [Contributing-Guide](../tree/dev/CONTRIBUTING.md).' >> $GITHUB_ENV
+          TEAM_NAME="${{ secrets.RELEASE_TEAM_NAME }}"
+          ORG_NAME="rdkcentral"
+          USERNAME="${{ github.actor }}"
+
+          # Check if the user is part of the specified team
+          IS_MEMBER=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/orgs/$ORG_NAME/teams/$TEAM_NAME/memberships/$USERNAME \
+            | jq -r '.state')
+
+          if [ "$IS_MEMBER" != "active" ]; then
+            echo "User is not a member of the $TEAM_NAME team"
             exit 1
           fi
 
-      - name: Comment on PR
-        if: failure()
-        uses: ./.github/actions/pr-comment
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pr_comment: ${{ env.FAIL_OUTPUT }}
+  validate-dev:
+    needs: check-team-membership
+    uses: ./.github/workflows/lint-and-sample-feature-run.yaml
+    with:
+      branch: 'dev'
