--- a/.github/workflows/pr-name-check.yaml
+++ b/.github/workflows/pr-name-check.yaml
@@ -1,6 +1,10 @@
 name: PR Name Check
 
 on:
+  pull_request:
+    branches:
+      - 'dev'
+    types: [opened, edited, synchronize]
   workflow_dispatch:
 
 jobs:
