discovery signoff changes

--- a/cypress/fixtures/fireboltCalls/discoverylaunch.json
+++ b/cypress/fixtures/fireboltCalls/discoverylaunch.json
@@ -911,6 +911,11 @@
     "params": "DISCOVERYLAUNCH_SEARCH_INTENT_WITHOUT_PROGRAMTYPE_FOR_MOVIEENTITY",
     "expected": "error"
   },
+  "SEARCH_INTENT_SUGGESTION_NOT_ARRAY": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_SEARCH_INTENT_SUGGESTION_NOT_ARRAY",
+    "expected": "error"
+  },
   "SEARCH_INTENT_WITHOUT_ENTITYTYPE_FOR_MOVIEENTITY_FOR_DISCOVERYLAUNCH": {
     "method": "discovery.launch",
     "params": "DISCOVERYLAUNCH_SEARCH_INTENT_WITHOUT_ENTITYTYPE_FOR_MOVIEENTITY",
@@ -986,6 +991,11 @@
     "params": "DISCOVERYLAUNCH_SEARCH_INTENT_WITH_INTEGER_SEASONID_FOR_EPISODEENTITY",
     "expected": "error"
   },
+  "SEARCH_INTENT_WITH_INVALID_EPISODETYPE_FOR_EPISODEENTITY_FOR_DISCOVERYLAUNCH": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_SEARCH_INTENT_WITH_INVALID_EPISODETYPE_FOR_EPISODEENTITY",
+    "expected": "error"
+  },
   "SEARCH_INTENT_WITH_INVALID_SERIESID_FOR_EPISODEENTITY_FOR_DISCOVERYLAUNCH": {
     "method": "discovery.launch",
     "params": "DISCOVERYLAUNCH_SEARCH_INTENT_WITH_INVALID_SERIESID_FOR_EPISODEENTITY",
@@ -999,6 +1009,11 @@
   "SEARCH_INTENT_WITH_INVALID_SERIESTYPE_FOR_SEASONENTITY_FOR_DISCOVERYLAUNCH": {
     "method": "discovery.launch",
     "params": "DISCOVERYLAUNCH_SEARCH_INTENT_WITH_INVALID_SERIESTYPE_FOR_SEASONENTITY",
+    "expected": "error"
+  },
+  "SEARCH_INTENT_WITH_INVALID_SERIESTYPE_FOR_SERIESENTITY_FOR_DISCOVERYLAUNCH": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_SEARCH_INTENT_WITH_INVALID_SERIESTYPE_FOR_SERIESENTITY",
     "expected": "error"
   },
   "SEARCH_INTENT_WITH_INVALID_PROGRAMTYPE_FOR_ADDITIONALENTITY_FOR_DISCOVERYLAUNCH": {
