--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "regex-parser": "^2.3.0",
     "setimmediate": "^1.0.5",
     "shell-exec": "1.0.2",
+    "soft-assert": "^0.2.7",
     "uuid": "^8.3.1",
     "winston": "^3.8.2"
   },
