feat: Validate initialize int player (#306)
Co-authored-by: Abhishek urs C J <abhishekurst@gmail.com>
Co-authored-by: preethi.m <preethi.m4@tataelxsi.co.in>
Co-authored-by: Nandana-NNR <nandana.n.raj97@gmail.com>
Co-authored-by: Preethi M R <102140979+PreethiMaai@users.noreply.github.com>
Co-authored-by: Kummithi Guru Eswar Sainath Reddy <148111540+Eswar2103@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "setimmediate": "^1.0.5",
     "shell-exec": "1.0.2",
     "uuid": "^8.3.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "soft-assert": "^0.2.7"
   },
   "devDependencies": {
     "babel-jest": "^27.4.5",
@@ -70,6 +71,13 @@
   "cypress-cucumber-preprocessor": {
     "json": {
       "enabled": true
-    }
+    },
+    "stepDefinitions": [
+      "cypress/e2e/[filepath]/**/*.{js,ts}",
+      "cypress/e2e/[filepath].{js,ts}",
+      "cypress/support/step_definitions/**/*.{js,ts}",
+      "node_modules/configModule/cypress/support/step_definitions/**/*.{js,ts}",
+      "node_modules/fcs-config-helper/cypress/support/step_definitions/**/*.{js,ts}"
+    ]
   }
 }
