--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ cypress/TestCases/Distributor
 # External Testdata
 cypress/fixtures/external
 
+# External sdk Resources
+sdkResources/external
+
 # Firebolt Calls Test Data
 cypress/fixtures/fireboltCalls/index.js
 
