--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "setimmediate": "^1.0.5",
     "shell-exec": "1.0.2",
     "uuid": "^8.3.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "soft-assert": "^0.2.7"
   },
   "devDependencies": {
     "babel-jest": "^27.4.5",
