--- a/package.json
+++ b/package.json
@@ -75,6 +75,13 @@
   "cypress-cucumber-preprocessor": {
     "json": {
       "enabled": true
-    }
+    },
+    "stepDefinitions": [
+      "cypress/e2e/[filepath]/**/*.{js,ts}",
+      "cypress/e2e/[filepath].{js,ts}",
+      "cypress/support/step_definitions/**/*.{js,ts}",
+      "node_modules/configModule/cypress/support/step_definitions/**/*.{js,ts}",
+      "node_modules/fcs-config-helper/cypress/support/step_definitions/**/*.{js,ts}"
+    ]
   }
 }
