Revert "Merge branch 'dev' into IPA_Version2"
This reverts commit eb1a5c7063c939f734ef64cb69b72c195ad7256c, reversing
changes made to 4c26960cd51b2ccff1d1ddc839dab016860c4220.

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "jsdom": "^24.0.0",
     "json-merger": "1.1.10",
     "jsonpath": "^1.1.1",
-    "jsonschema": "1.4.1",
+    "jsonschema": "^1.4.0",
     "lint": "^0.8.19",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
