--- a/sdkResources/1.3.0/fixtures/fireboltCalls/discoverylaunch.json
+++ b/sdkResources/1.3.0/fixtures/fireboltCalls/discoverylaunch.json
@@ -19,6 +19,30 @@
     "method": "discovery.launch",
     "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_SEARCH"
   },
+  "LAUNCH_APP_WITH_HOME_INTENT_SOURCE_AUTOMATED-RAIL": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_AUTOMATED-RAIL"
+  },
+  "LAUNCH_APP_WITH_HOME_INTENT_SOURCE_PLAY-NOW-RAIL": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_PLAY-NOW-RAIL"
+  },
+  "LAUNCH_APP_WITH_HOME_INTENT_SOURCE_PLAYLIST-RAIL": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_PLAYLIST-RAIL"
+  },
+  "LAUNCH_APP_WITH_HOME_INTENT_SOURCE_SHOWPAGE": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_SHOWPAGE"
+  },
+  "LAUNCH_APP_WITH_HOME_INTENT_SOURCE_APPS-RAIL-LAUNCH": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_APPS-RAIL-LAUNCH"
+  },
+  "LAUNCH_APP_WITH_HOME_INTENT_SOURCE_LINEAR-TRIGGER": {
+    "method": "discovery.launch",
+    "params": "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_LINEAR-TRIGGER"
+  },
   "LAUNCH_APP_WITH_PLAYBACK_INTENT": {
     "method": "discovery.launch",
     "params": "DISCOVERYLAUNCH_PLAYBACK_INTENT"
