--- a/sdkResources/1.3.0/fixtures/objects/validationObjects/discoverylaunch.json
+++ b/sdkResources/1.3.0/fixtures/objects/validationObjects/discoverylaunch.json
@@ -14,6 +14,21 @@
             }
         ]
     },
+    "DISCOVERYLAUNCH_LAUNCH_INTENT_SOURCE_DEVICE": {
+        "method": "discovery.onNavigateTo",
+        "data": [
+            {
+                "type": "fixture",
+                "validations": [
+                    {
+                        "mode": "staticContentValidation",
+                        "type": "DISCOVERYLAUNCH_LAUNCH_INTENT_CONTENT_WITH_SOURCE_DEVICE",
+                        "description": "Validation of the DiscoveryLaunch for home intent"
+                    }
+                ]
+            }
+        ]
+    },
     "DISCOVERYLAUNCH_HOME_INTENT_SOURCE_VOICE": {
         "method": "discovery.onNavigateTo",
         "data": [
